<resources>
    <string name="app_name">Simple Accounting</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <!-- Navigation Drawer Menu -->
    <string name="nav_accounts">Accounts</string>
    <string name="nav_invoices">Invoices</string>
    <string name="nav_labels">Manage Labels</string>
    <string name="nav_import_database">Import</string>
    <string name="nav_export_database">Export</string>
    <string name="nav_settings">Settings</string>
    <string name="nav_about">About</string>

    <!-- Main Activity Fab Popup Menu -->
    <string name="popup_add_account">Account</string>
    <string name="popup_add_payment">Payment</string>
    <string name="popup_add_invoice">Invoice</string>
    <string name="popup_add_label">Label</string>

    <!-- Main Activity Menu -->
    <string name="action_debug_print">Debug SQL</string>                                                    <!-- DEBUG -->
    <string name="action_debug_delete_payments">Debug SQL DELETE PAYMENTS</string>                          <!-- DEBUG -->
    <string name="action_debug_copy_database">Debug copy database to download</string>                      <!-- DEBUG -->

    <!-- Create Activity Menu -->
    <string name="action_save">Save</string>

    <!-- Create Activity Titles for different fragments -->
    <string name="title_accounts">Accounts</string>
    <string name="title_invoices">Invoices</string>

    <!-- Create Activity Titles for different fragments -->
    <string name="title_add_account">Create account</string>
    <string name="title_add_payment">Add payment</string>
    <string name="title_add_invoice">Create invoice</string>
    <string name="title_edit_account">Edit account</string>
    <string name="title_edit_payment">Edit payment</string>
    <string name="title_edit_invoice">Edit invoice</string>

    <string name="title_manage_labels">Manage Labels</string>

    <!-- Universal contextual Menu strings -->
    <string name="contextual_edit">Edit</string>
    <string name="contextual_delete">Delete</string>

    <string name="database_imported">"Database imported from Google Drive."</string>
    <string name="database_exported">"Database exported to Google Drive."</string>

    <string name="title">Title</string>
    <string name="notes">Notes</string>
    <string name="account_balance">Balance</string>
    <string name="account_type">Type</string>
    <string name="label">Label</string>

    <string name="select_account">Account</string>
    <string name="payment_amount">Amount</string>
    <string name="payment_date">Payment Date</string>
    <string name="due_date">Due Date</string>
    <string name="repeat_interval">Repeat</string>
    <string name="auto_pay_date">Auto Pay Date</string>
    <string name="notification_time">Notification</string>
    <string name="select_label">Select label</string>
    <string name="add_repeat_interval">No repeat</string>
    <string name="add_date">Add date</string>

    <string name="currency_font_icon">€</string>
    <string name="label_name">Label name</string>

    <string name="cancel">Cancel</string>
    <string name="create">Create</string>
    <string name="discard">Discard</string>
    <string name="keep_editing">Keep Editing</string>
    <string name="okay">Okay</string>
    <string name="save">Save</string>

    <string name="dialog_create_label_title">Create Label</string>
    <string name="dialog_edit_label_title">Edit Label</string>

    <string name="alert_dialog_discard_text">Are you sure you want to discard this</string>
    <string name="type_invoice">invoice</string>
    <string name="type_account">account</string>
    <string name="type_payment">payment</string>

    <string name="alert_dialog_exit_application_title">Confirm Exit</string>
    <string name="alert_dialog_exit_application_msg">Do you want to quit the application?</string>

    <string name="and">and</string>
    <string name="must_have_value">must have a value.</string>
    <string name="snackbar_close_text_field_empty">Got it</string>

    <string name="no_accounts_created">No accounts created.</string>

    <string-array name="sort_order">
        <item>Ascending</item>
        <item>Descending</item>
    </string-array>

    <string-array name="sort_type">
        <item>@string/due_date</item>
        <item>@string/auto_pay_date</item>
        <item>@string/payment_amount</item>
    </string-array>

    <string name="show_paid_invoices">Show paid invoices</string>

</resources>
