<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".CreateDirectPaymentFragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingStart="25dp"
        android:paddingEnd="25dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:paddingTop="6dp"
            android:layout_height="50dp"
            android:gravity="center|start"
            android:text="@string/select_account"
            android:textSize="@dimen/text_size"
            android:id="@+id/text_select_account" />

        <View style="@style/Divider"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingTop="8dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center|start"
                android:text="@string/title"
                android:textSize="@dimen/text_title_size"
                android:id="@+id/text_payment_title" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textShortMessage"
                android:textSize="@dimen/text_size"
                android:id="@+id/edit_text_payment_title" />
        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center|start"
                android:text="@string/payment_amount"
                android:textSize="@dimen/text_title_size"
                android:id="@+id/text_payment_amount" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="numberDecimal"
                android:textSize="@dimen/text_size"
                android:id="@+id/edit_text_payment_amount" />
        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center|start"
                android:text="@string/due_date"
                android:textSize="@dimen/text_title_size"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:gravity="center|start"
                android:text="@string/add_date"
                android:textSize="@dimen/text_size"
                android:id="@+id/text_select_due_date" />

        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginBottom="6dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center|start"
                android:text="@string/payment_date"
                android:textSize="@dimen/text_title_size"/>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="40dp">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center|start"

                    android:text="@string/add_date"
                    android:textSize="@dimen/text_size"
                    android:id="@+id/text_select_date" />

                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_gravity="center|end"
                    android:src="@android:drawable/ic_menu_close_clear_cancel"/>

            </LinearLayout>
        </LinearLayout>

        <View style="@style/Divider"/>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="10dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center|start"
                android:text="@string/notification_time"
                android:textSize="@dimen/text_title_size"/>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="40dp">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="4"
                    android:gravity="center|start"
                    android:text="1.1.2001"
                    android:textSize="@dimen/text_size"
                    android:id="@+id/text_invoice_notification_date" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center|end"
                    android:text="00:00"
                    android:textSize="@dimen/text_size"
                    android:id="@+id/text_invoice_notification_time" />


            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center|start"
                android:text="@string/repeat_interval"
                android:textSize="@dimen/text_title_size"/>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="40dp">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center|start"
                    android:text="@string/add_repeat_interval"
                    android:textSize="@dimen/text_size"
                    android:id="@+id/text_repeat_interval" />

                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_gravity="center|end"
                    android:src="@android:drawable/ic_menu_close_clear_cancel"/>

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center|start"
                android:text="@string/auto_pay_date"
                android:textSize="@dimen/text_title_size"/>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="40dp">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center|start"
                    android:text="@string/add_date"
                    android:textSize="@dimen/text_size"
                    android:id="@+id/text_auto_pay_date" />

                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_gravity="center|end"
                    android:src="@android:drawable/ic_menu_close_clear_cancel"/>

            </LinearLayout>

        </LinearLayout>

        <View style="@style/Divider"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:gravity="center|start"
            android:text="@string/select_label"
            android:textSize="@dimen/text_size"
            android:id="@+id/text_select_label" />

        <View style="@style/Divider"/>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_marginTop="10dp"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="start|center"
                android:text="@string/notes"
                android:textSize="@dimen/text_title_size" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textMultiLine"
                android:textSize="@dimen/text_size"
                android:id="@+id/edit_text_notes" />
        </LinearLayout>

    </LinearLayout>

</ScrollView>
