<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CreateAccountFragment"
    android:paddingStart="25dp"
    android:paddingEnd="25dp"
    android:paddingTop="15dp"
    android:orientation="vertical">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center|start"
            android:text="@string/title"
            android:textSize="@dimen/text_title_size"
            android:id="@+id/text_account_title" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textShortMessage"
            android:textSize="@dimen/text_size"
            android:id="@+id/edit_text_account_title" />
    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center|start"
            android:text="@string/account_type"
            android:textSize="@dimen/text_title_size"
            android:id="@+id/text_account_type" />

        <Spinner
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:textSize="@dimen/text_size"
            android:id="@+id/spinner_account_type" />
    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center|start"
            android:text="@string/account_balance"
            android:textSize="@dimen/text_title_size"
            android:id="@+id/text_account_balance" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal"
            android:textSize="@dimen/text_size"
            android:id="@+id/edit_text_account_balance" />
    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/notes"
            android:textSize="@dimen/text_title_size"
            android:id="@+id/text_account_description" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textMultiLine"
            android:textSize="@dimen/text_size"
            android:id="@+id/edit_text_account_description" />
    </LinearLayout>

</LinearLayout>
