<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/popup_layout"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingEnd="@dimen/fab_margin">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="@dimen/popup_spacing"
        android:layout_marginBottom="@dimen/popup_spacing">

        <TextView
            android:id="@+id/popup_fab_add_account"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:paddingStart="@dimen/fab_margin"
            android:paddingEnd="@dimen/fab_margin"
            android:gravity="center|end"
            android:layout_gravity="center|end"
            android:textSize="@dimen/popup_text_size"
            android:text="@string/popup_add_account"
            android:textColor="@android:color/white"
            android:shadowColor="@android:color/black"
            android:shadowDx="1"
            android:shadowDy="1"
            android:shadowRadius="4"/>

        <ImageView
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_gravity="center"
            android:background="@color/colorAccent"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginBottom="@dimen/popup_spacing">

        <TextView
            android:id="@+id/popup_fab_add_payment"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:paddingStart="@dimen/fab_margin"
            android:paddingEnd="@dimen/fab_margin"
            android:gravity="center|end"
            android:layout_gravity="center|end"
            android:textSize="@dimen/popup_text_size"
            android:text="@string/popup_add_payment"
            android:textColor="@android:color/white"
            android:shadowColor="@android:color/black"
            android:shadowDx="1"
            android:shadowDy="1"
            android:shadowRadius="4"/>

        <ImageView
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_gravity="center"
            android:background="@color/colorAccent"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginBottom="@dimen/popup_spacing">

        <TextView
            android:id="@+id/popup_fab_add_invoice"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:paddingStart="@dimen/fab_margin"
            android:paddingEnd="@dimen/fab_margin"
            android:gravity="center|end"
            android:layout_gravity="center|end"
            android:textSize="@dimen/popup_text_size"
            android:text="@string/popup_add_invoice"
            android:textColor="@android:color/white"
            android:shadowColor="@android:color/black"
            android:shadowDx="1"
            android:shadowDy="1"
            android:shadowRadius="4"/>

        <ImageView
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_gravity="center"
            android:background="@color/colorAccent"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginBottom="@dimen/popup_spacing">

        <TextView
            android:id="@+id/popup_fab_add_label"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:paddingStart="@dimen/fab_margin"
            android:paddingEnd="@dimen/fab_margin"
            android:gravity="center|end"
            android:layout_gravity="center|end"
            android:textSize="@dimen/popup_text_size"
            android:text="@string/popup_add_label"
            android:textColor="@android:color/white"
            android:shadowColor="@android:color/black"
            android:shadowDx="1"
            android:shadowDy="1"
            android:shadowRadius="4"/>

        <ImageView
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_gravity="center"
            android:background="@color/colorAccent"/>

    </LinearLayout>

</LinearLayout>
